--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>客服聊天系统</title>
-    <script type="text/javascript" src="http://apps.bdimg.com/libs/jquery/1.6.4/jquery.js"></script>
+    <script type="text/javascript" src="jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
 </head>
